# AdvogadoAI_API

./: .gitignore  CURL_EXAMPLES_SUMMARY.md  DELIVERY_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.txt  INDEX.md  README_RAG.md  START_HERE.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: security.py
app/api/routers/: auth_router.py  business_router.py  document_router.py  rag_router.py
app/config/: settings.py
app/domain/models/: analysis_models.py  document_models.py  user_models.py
app/domain/services/: analysis_service.py  auth_service.py  jurisprudence_service.py  pdf_service.py  rag_service.py  text_processing_service.py  user_service.py
app/infrastructure/crew/: agents.py  tasks.py  workflows.py
app/infrastructure/db/: database.py  entities.py
app/infrastructure/langgraph/: graph_builder.py
app/utils/: file_utils.py  logger.py
data/: app.db
docs/: CHANGELOG_RAG_IMPLEMENTATION.md  FRONTEND_INTEGRATION_FINAL.md  RAG_QUICK_START.md  ai_response_schema.md  backend_auth_and_prompts.md  explicacao_codigo.md  frontend-integration.md  frontend_auth_integration.md  rag_frontend_integration.md
tests/: test_graph_workflow.py  test_pdf_service.py
