[project]
name = "lawerai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai]>=1.6.1",
    "fastapi>=0.110.0",
    "langgraph>=0.1.11",
    "litellm>=1.80.8",
    "pdfplumber>=0.11.4",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.23.2",
]
